Home page changes

--- a/beta_srvparts/index.html
+++ b/beta_srvparts/index.html
@@ -25,8 +25,8 @@
             <div class="head">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-3">
-                            <h1 class="logo"><a href="javascript:;">Superior RV <span>Chassis Parts, LLC</span></a></h1>
+                        <div class="col-sm-4">
+                            <h1 class="logo"><a href="javascript:;"><img src="img/superior-logo-orange.png" alt="logo"></a></h1>
                         </div>
                         <div class="col-xs-12 col-sm-8 pull-right">
                             <ul class="header-sidebar">
@@ -38,17 +38,10 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <i class="fa fa-fax"></i>
-                                    <div class="info-side">
-                                        <span>PO Box</span>
-                                        <p>72485</p>
-                                    </div>
-                                </li>
-                                <li>
                                     <i class="fa fa-map-marker"></i>
                                     <div class="info-side">
-                                        <span>Springfield</span>
-                                        <p>OR 97477</p>
+                                        <span>Location</span>
+                                        <p>PO Box 72485 Springfield, OR 97477</p>
                                     </div>
                                 </li>
                             </ul>
@@ -61,10 +54,10 @@
                     <a href="javascript:;" class="nav-btn"><span></span><span></span><span></span></a>
                     <ul>
                         <li class="active"><a href="javascript:;">Home</a></li>
-                        <li><a href="products">Products</a></li>
-                        <li><a href="videos">Videos</a></li>
-                        <li><a href="resources">Resources</a></li>
-                        <li><a href="about">About us</a></li>
+                        <li><a href="products.php">Products</a></li>
+                        <li><a href="videos.php">Videos</a></li>
+                        <li><a href="resources.php">Resources</a></li>
+                        <li><a href="about.php">About us</a></li>
                     </ul>
                 </div>
             </div>
@@ -79,8 +72,9 @@
                         <div class="product-box">
                             <div class="product-img"><a href="javascript:;"><img src="img/trailing_arm_sm.png" alt="" /></a></div>
                             <div class="product-info">
-                                <h2><a href="javascript:;">Trailing Arm Replacement Kit</a></h2>
+                                <h2><a href="trailing_arm.php">Trailing Arm Replacement Kit</a></h2>
                                 <p>The Trailing Arm kit includes all new axle mounting hardware and has a powder-coat finish for ultimate corrosion resistance. These kits are built to address the original OEM parts installed at the factory and also supplied as replaement parts for field repairs.</p>
+                                <p><a class="btn btn-primary" href="trailing_arm.php">Read more...</a></p>
                             </div>
                         </div>
                     </div>
@@ -88,8 +82,9 @@
                         <div class="product-box">
                             <div class="product-img"><a href="javascript:;"><img src="img/valves_sm.png" alt="" /></a></div>
                             <div class="product-info">
-                                <h2><a href="javascript:;">Comfort air ride Valves</a></h2>
-                                <p>Position the coach on a level flat surface, drive the coach onto approximately 4" blocks, and set the park brake. You may drive the coach over a work pit and chock the front wheels and block off adequate space at the rear of the coach to work.</p>
+                                <h2><a href="valves.php">Comfort air ride Valves</a></h2>
+                                <p>The most cost effective handling upgrade you can make on a diesel pusher. Greatly reduces annoying “porpoising” on rough roads and freeway expansion joints. Greatly reduces body roll at slow speeds while maintaining a smooth, comfortable ride. Installs easily in just minutes.</p>
+                                <p><a class="btn btn-primary" href="valves.php">Read more...</a></p>
                             </div>
                         </div>
                     </div>
@@ -97,8 +92,9 @@
                         <div class="product-box">
                             <div class="product-img"><a href="javascript:;"><img src="img/rek4_sm.png" alt="" /></a></div>
                             <div class="product-info">
-                                <h2><a href="javascript:;">4 bag ride enhancement kit</a></h2>
-                                <p>The complex suspension systems of modern motorhomes are a design trade-off between a variety of qualities and factors including cost. Many factory motorhomes may include lower quality components in order to keep purchase cost down - shock absorbers are a prime...</p>
+                                <h2><a href="REK4.php">4 bag ride enhancement kit</a></h2>
+                                <p>Are you experiencing a harsher, bumpier ride than you want? Does your coach wander and track poorly through the curves? If this sounds more like your coach than you want, consider one of our custom designed ride enhancement kits. with exactly the right...</p>
+                                <p><a class="btn btn-primary" href="REK4.php">Read more...</a></p>
                             </div>
                         </div>
                     </div>
@@ -109,19 +105,30 @@
         <section class="parallax-section">
             <div class="container">
                 <div class="text-center distributor-logo"><img src="img/source-logo.png" alt="Distributor logo"></div>
-                <h2>Distributor for Source Engineering Parts <br /><span class="cursive-text">Giving you that Dream</span></h2>
+                <h2>Distributor for Source Engineering Parts <br /><span class="cursive-text">Giving you the Superior ride you deserve</span></h2>
             </div>
         </section>
 
         <section class="about-section">
             <div class="container">
-                <h2 class="title">Giving you that Dream Ride you Deserve</h2>
+                <!-- <h2 class="title">Giving you that Dream Ride you Deserve</h2> -->
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-md-9">
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/ikEG_s6Z1d8" frameborder="0" allowfullscreen></iframe>
                     </div>
-                    <div class="col-md-5">
-                        <ul class="feature-list">
+                    <div class="col-md-3">
+                        <div class="video-section">
+                            <div class="embed-responsive embed-responsive-16by9">
+                              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rHnnXZ7qFWg"></iframe>
+                            </div>
+                            <div class="embed-responsive embed-responsive-16by9">
+                              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WppiDOrj6zA"></iframe>
+                            </div>
+                            <div class="embed-responsive embed-responsive-16by9">
+                              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ae7V6pDUaAo"></iframe>
+                            </div>
+                        </div>
+                        <!-- <ul class="feature-list">
                             <li>
                                 <div class="img-box">
                                     <img src="img/SRV-Ultra-Fan.png" alt="SRV Ultra Fan">
@@ -149,7 +156,7 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis dapibus massa. Sed pretium est sit amet odio posuere.</p>
                                 </div>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
@@ -161,14 +168,14 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2 class="title">For a price quote or question please contact us</h2>
                         <div class="row">
-                            <div class="col-md-6 col-sm-6 col-xs-6">
+                            <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-group info-box">
-                                    <label>Phone:</label>  <span> <a href="tel:541-914-3827">541-914-3827</a></span>
+                                    <label><i class="fa fa-phone"></i></label>  <span> <a href="tel:541-914-3827">&nbsp;541-914-3827</a></span>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-sm-6 col-xs-6">
+                            <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class="form-group info-box">
-                                    <label>Email:</label> <span><a href="mailto:admin@example.com">admin@example.com</a></span>
+                                    <label><i class="fa fa-envelope"></i></label> <span><a href="mailto:john@srvparts.com">&nbsp;john@srvparts.com</a></span>
                                 </div>
                             </div>
                         </div>
@@ -187,11 +194,11 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="phone">Phone</label>
-                                        <input type="tel" class="form-control" id="phone" placeholder="456 7897 1324">
+                                        <input type="tel" class="form-control" id="phone" placeholder="(123) 456-7890">
                                     </div>
                                     <div class="form-group">
                                         <label for="email">Email</label>
-                                        <input type="email" class="form-control" id="email" placeholder="john@gmail.com">
+                                        <input type="email" class="form-control" id="email" placeholder="yourmail@domain.com">
                                     </div>
                                 </div>
                             </div>
@@ -218,7 +225,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <p>© 2016, Superior RV Chassis Parts, LLC  all rights reserved powered by Blackwell Data</p>
+                        <p>© 2016, Superior RV Chassis Parts, LLC  all rights reserved powered by <a href="http://www.spectechcular.com/" target="_blank">Spectechcular</a></p>
                     </div>
                 </div>
             </div>
